SigmaCodebackup3rdSep/objects/Products_Needed__c.object
<CustomObject>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Needed</relationshipLabel>
        <relationshipName>Products_Required</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>Work_Type__c</referenceTo>
        <relationshipLabel>Products Needed</relationshipLabel>
        <relationshipName>Products_Needed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Products Needed</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Products__c</columns>
        <columns>Quantity__c</columns>
        <columns>Work_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{000}</displayFormat>
        <label>Products Needed Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Needed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_and_Quantity_Field_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Products__c ) ||  ISBLANK(Quantity__c)</errorConditionFormula>
        <errorMessage>Enter the Product and Quantity Field</errorMessage>
    </validationRules>
</CustomObject>